Fixed the alignment of the widget container title

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -80,3 +80,7 @@
     user-select:none;
     cursor: default;
 }
+
+.widgetHeader-title {
+    top: 6px;
+}
